<resources>
    <string name="app_name">Lights Out</string>
    <string name="app_title">Lights Out</string>
    <string name="enter_nickname">Enter nickname</string>
    <string name="done">Done</string>
    <string name="response">Please input your name.</string>
    <string name="box_val">0</string>
    <string name="win_text">You Won!</string>
    <string name="retry">Retry</string>
    <string name="count">count: 0</string>
    <string name="count_start">count: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
